--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,12 @@
+/* Universal Style */
 *{
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
 }
-/* Universal Style */
+.pt-135{
+    padding-top: 135px;
+}
 .container{
     width: 1140px;
     margin: auto;
@@ -45,4 +48,44 @@
     font-size: 20px;
     font-weight: 600;
     margin-top: 32px;
+}
+/* About Section */
+.about-content-wraper{
+    display: flex;
+    gap: 10%;
+}
+.about-img{
+    flex-basis: 50%;
+}
+.about-content{
+    align-self: center;
+    flex-basis: 40%;
+}
+.about-title {
+    color: #151414;
+    font-size: 40px;
+    font-weight: 700;
+    padding-right: 10px;
+    margin-bottom: 24px;
+}
+.about-description{
+    color: #444343;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 400;
+    margin-bottom: 16px;
+}
+.about-list{
+    list-style: none;
+}
+.about-list li{
+    color: #444343;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+.about-list li i{
+    color: #16D887;
+    font-size: 18px;
+    margin-right: 5px;
 }
