--- a/styles/style.css
+++ b/styles/style.css
@@ -89,3 +89,33 @@
     font-size: 18px;
     margin-right: 5px;
 }
+/* Plan Section */
+.plan-section{
+    text-align: center;
+}
+.section-title{
+    color: #151414;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+.plan-content-wraper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.plan img {
+    width: 92px;
+    margin-bottom: 24px;
+}
+.plan-title{
+    color: #151414;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+.plan-description{
+    color: #737272;
+    font-size: 25px;
+    font-weight: 500;
+}
