--- a/styles/style.css
+++ b/styles/style.css
@@ -149,3 +149,74 @@
     text-decoration: none;
     display: inline-block;
 }
+/* Footer Section */
+footer{
+    background-color: #151414;
+    padding: 130px 0;
+}
+.footer-content-wraper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.footer-content{
+    max-width: 485px;
+}
+.footer-title{
+    color: #F8F8F8;
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+.footer-description{
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 24px;
+}
+.footer-list{
+    list-style: none;
+}
+.footer-list li{
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 16px;
+}
+.social-icon-wraper{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    margin-top: 32px;
+}
+.footer-form{
+    max-width: 330px;
+}
+.form-title{
+    color: #fff;
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 31px;
+}
+.email {
+    padding: 21px;
+    border: 1px solid #fff;
+    border-radius: 8px;
+    background-color: transparent;
+    outline: none;
+    color: #fff;
+    font-weight: 400;
+    font-size: 18px;
+    display: block;
+}
+.submit-btn{
+    padding: 20px 25px;
+    background-color: #005FAC;
+    border-radius: 8px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 16px;
+}
