--- a/styles/style.css
+++ b/styles/style.css
@@ -42,12 +42,19 @@
     color: #005FAC;
     padding: 20px 25px;
     background-color: #fff;
+    border: 1px solid #005FAC;
     border-radius: 5px;
     display: inline-block;
     text-decoration: none;
     font-size: 20px;
     font-weight: 600;
     margin-top: 32px;
+    transition: .4s;
+}
+.banner-btn:hover{
+    color: #fff;
+    border: 1px solid #fff;
+    background-color: transparent;
 }
 /* About Section */
 .about-content-wraper{
@@ -181,11 +188,46 @@
     width: 48%;
 }
 .portfolio-hover-box{
-    overflow: hidden;
     cursor: pointer;
+    position: relative;
 }
 .portfolio-hover-box img{
     width: 100%;
+}
+.portfolio-title-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 20px;
+    left: 30px;
+    right: 30px;
+    padding: 15px;
+    border: 1px solid rgba(255, 255, 255, .3);
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, .48);
+    backdrop-filter: blur(7px);
+    transform: translateY(100px);
+    opacity: 0;
+    transition: .4s;
+}
+.box-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 5px;
+    /* background: -webkit-linear-gradient(to right, #12c2e9, #c471ed, #f64f59); */
+    background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.box-subtitle {
+    opacity: .7;
+    margin: 0 5px;
+}
+.portfolio-hover-box:hover .portfolio-title-box{
+    opacity: 1;
+    transform: translateY(0);
 }
 /* CTA Section */
 .cta-section{
@@ -213,9 +255,16 @@
     font-weight: 600;
     padding: 20px 36px;
     background-color: #fff;
+    border: 1px solid #005FAC;
     border-radius: 5px;
     text-decoration: none;
     display: inline-block;
+    transition: .4s;
+}
+.cta-btn:hover{
+    color: #fff;
+    background-color: transparent;
+    border: 1px solid #fff;
 }
 /* Footer Section */
 footer{
@@ -282,9 +331,15 @@ footer{
 .submit-btn{
     padding: 20px 25px;
     background-color: #005FAC;
+    border: 1px solid #005FAC;
     border-radius: 8px;
     color: #fff;
     font-size: 20px;
     font-weight: 600;
     margin-top: 16px;
+    transition: .4s;
+}
+.submit-btn:hover{
+    background-color: transparent;
+    color: #005FAC;
 }
